--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
 *,
 *::before,
 *::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+}
+.App {
+  font-family: "Roboto", sans-serif;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  overflow-x: hidden;
 }
