fixed some mobile bugs with the after shadow and text size on hero section

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -6,7 +6,7 @@
   background-position: center;
   height: -moz-available; /* Mozilla-based browsers */
   height: -webkit-fill-available; /* Webkit based browsers */
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
